Fixes alignment of switch-button in SelectingPlan

--- a/src/components/MainContent/SelectingPlan/SelectingPlan.module.css
+++ b/src/components/MainContent/SelectingPlan/SelectingPlan.module.css
@@ -7,6 +7,7 @@
   display: flex;
   gap: 1rem;
   justify-content: center;
+  align-items: center;
   margin-top: 2.5rem;
   font-size: 0.8rem;
   font-weight: 500;
@@ -15,6 +16,11 @@
 
 .active-period {
   color: var(--color-marine-blue);
+}
+
+.switch-button {
+  display: grid;
+  place-items: center;
 }
 
 .switch-button__checkbox {
@@ -53,7 +59,7 @@
   transform: translateX(15px);
 }
 
-@media (min-width: 860px) {
+@media (min-width: 765px) {
   .plans {
     grid-template-columns: repeat(3, 1fr);
   }
